--- a/assets/css/project-single.css
+++ b/assets/css/project-single.css
@@ -163,3 +163,35 @@
   /* Make the link brighter on hover */
   text-decoration: underline;
 }
+
+.responsive-video-wrapper {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+  /* 16:9 aspect ratio */
+  width: 100%;
+  /* Take full width of parent */
+  max-width: none;
+  /* Remove cap */
+  margin: 2rem 0;
+  /* Space above/below */
+}
+
+.responsive-video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+.project-content-box a,
+.project-content-box a:visited {
+  color: #A9BFFF !important;
+  text-decoration: underline !important;
+}
+
+.project-content-box a:hover {
+  color: #FFFFFF !important;
+}
